crates/formatter/tests/snapshots/snapshots__coder__migrations__000395_drop_ai_task_sidebar_app_id_from_workspace_builds.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_builds add column ai_task_sidebar_app_id uuid;
alter table workspace_builds
	add constraint workspace_builds_ai_task_sidebar_app_id_fkey
		foreign key (ai_task_sidebar_app_id) references workspace_apps (id);

drop view workspace_build_with_user;
-- Restore view.
create view workspace_build_with_user as
select
	workspace_builds.id,
	workspace_builds.created_at,
	workspace_builds.updated_at,
	workspace_builds.workspace_id,
	workspace_builds.template_version_id,
	workspace_builds.build_number,
	workspace_builds.transition,
	workspace_builds.initiator_id,
	workspace_builds.provisioner_state,
	workspace_builds.job_id,
	workspace_builds.deadline,
	workspace_builds.reason,
	workspace_builds.daily_cost,
	workspace_builds.max_deadline,
	workspace_builds.template_version_preset_id,
	workspace_builds.has_ai_task,
	workspace_builds.ai_task_sidebar_app_id,
	workspace_builds.has_external_agent,
	coalesce(visible_users.avatar_url, ''::text) as initiator_by_avatar_url,
	coalesce(visible_users.username, ''::text) as initiator_by_username,
	coalesce(visible_users.name, ''::text) as initiator_by_name
from (
	workspace_builds
		left join visible_users
			on ((workspace_builds.initiator_id = visible_users.id))
);

comment on view workspace_build_with_user is 'Joins in the username + avatar url of the initiated by user.';
