crates/formatter/tests/snapshots/snapshots__coder__migrations__000396_add_aibridge_interceptions_api_key_id.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table aibridge_interceptions drop column api_key_id;
