crates/formatter/tests/snapshots/snapshots__coder__migrations__000399_template_version_presets_last_invalidated_at.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_version_presets drop column last_invalidated_at;
