crates/formatter/tests/snapshots/snapshots__coder__migrations__000401_add_workspace_agents_index.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists workspace_agents_auth_instance_id_deleted_idx;
